beginning of school year

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -50,7 +50,7 @@
                 <button class="btn btn-outline-light me-2 fw-bold btn-md" type="button">Connexion</button>
             </div>
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="mot-clé" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="mot-clé (en construction)" aria-label="Search">
                 <button class="btn btn-outline-light fw-bold btn-md" type="submit">Recherche</button>
             </form>
         </div>
