--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,18 +3,17 @@
 
 {% block principal %}
 
-<section class="py-5" style="background-image: linear-gradient(160deg, #f0ad4e 0%, white 50%);opacity:.8;">
+<section class="py-5" style="background-image: linear-gradient(160deg, #f0ad4e 0%, white 30%);opacity:.8;">
     <div class="container">
         <h1 class="text-center mt-5 pt-5" style="color:black">ToKeTa</h1> 
         <p class="text-center">Construis rapidement des connaissances fiables en programmation.</p>
         <p class="text-center">Apprends à coder efficacement.</p>
         <img src="{% static 'home/images/general/python.jpg' %}" width="100px" class="center">
-        <a href=""><button class="bouton center my-5">Créer un compte ...</button></a> 
+        <a href=""><button class="bouton center mt-5">Créer un compte ...</button></a> 
+        <p class="text-center">(En construction)</p>
         <p class="text-center py-5">"Everybody in this country should learn how to program a computer because it teaches you how to think." <em>Steve Jobs</em></p>
     </div>
 </section>
-
-
 
 
 <!-- INTRODUCTION -->
@@ -33,7 +32,6 @@
             jeux simples, ou encore améliorer vos connaissances mathématiques de base.</p> 
     </div>
 </section>
-
 
 
 <!-- IMAGES PRESENTATION -->
@@ -141,7 +139,7 @@
                 <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz7">&#10061; Python - les chaînes de caractères</a>
                 <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz9">&#10061; Python - les fonctions</a>
                 <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz10">&#10061; Python - questionnaire</a>
-                    </div>
+                </div>
             </div>
             <div class="col-12 col-md-6 center my-auto">
                 <img src="{% static 'home/images/general/interrogation.png' %}" alt="ideas">
@@ -172,20 +170,19 @@
             </div>
           </div>
           <div class="row">  
-            <a href="https://youtu.be/ImndwJtu4AE" target="_blank">&#10061; Statistiques - Les notions de base en statistiques</a>
-            <a href="https://youtu.be/AA7-Sq3GFtc" target="_blank">&#10061; Statistiques - Trouver la médiane et les quartiles c'est facile</a>
-            <a href="https://youtu.be/c2eOXieaWUU" target="_blank">&#10061; Calcul littéral - Eviter les pièges de la factorisation</a>
-            <a href="https://youtu.be/2hJgUhH3AG8" target="_blank">&#10061; Calcul littéral - Factoriser avec Geogebra</a>
-            <a href="https://youtu.be/4b3rSGZrTcc" target="_blank">&#10061; Excel - Modifier une cellule Excel avec une condition</a>
-            <a href="https://youtu.be/eb8AcBYo2yQ" target="_blank">&#10061; Word - Le correcteur d'orthographe sous Word</a>
-            <a href="https://youtu.be/nWYezXg-eok" target="_blank">&#10061; Word - Utilisation du dictaphone et du traducteur sous Word</a>
-            <a href="https://youtu.be/ITi4LrB_YMQ" target="_blank">&#10061; Word - Utiliser la fonctionnalité dessin sur Word</a>
             <a href="https://youtu.be/YcdOxQf16bs" target="_blank">&#10061; Python - Palindrome en Python</a>
             <a href="https://youtu.be/ZMjF4JcR7Go" target="_blank">&#10061; Python - boucles imbriquées en Python</a>
             <a href="https://youtu.be/FNbX5NOBtic" target="_blank">&#10061; Scratch - Faire danser le sprite avec Scratch</a>
             <a href="https://youtu.be/dIDSz-bpLGo" target="_blank">&#10061; Scratch - Tracer une courbe avec Scratch</a>
             <a href="https://youtu.be/DvLj-jlKwbY" target="_blank">&#10061; Scratch - Mouvement d'un sprite avec Scratch</a>
-            
+            <a href="https://youtu.be/4b3rSGZrTcc" target="_blank">&#10061; Excel - Modifier une cellule Excel avec une condition</a>
+            <a href="https://youtu.be/eb8AcBYo2yQ" target="_blank">&#10061; Word - Le correcteur d'orthographe sous Word</a>
+            <a href="https://youtu.be/nWYezXg-eok" target="_blank">&#10061; Word - Utilisation du dictaphone et du traducteur sous Word</a>
+            <a href="https://youtu.be/ITi4LrB_YMQ" target="_blank">&#10061; Word - Utiliser la fonctionnalité dessin sur Word</a>
+            <a href="https://youtu.be/ImndwJtu4AE" target="_blank">&#10061; Statistiques - Les notions de base en statistiques</a>
+            <a href="https://youtu.be/AA7-Sq3GFtc" target="_blank">&#10061; Statistiques - Trouver la médiane et les quartiles c'est facile</a>
+            <a href="https://youtu.be/c2eOXieaWUU" target="_blank">&#10061; Calcul littéral - Eviter les pièges de la factorisation</a>
+            <a href="https://youtu.be/2hJgUhH3AG8" target="_blank">&#10061; Calcul littéral - Factoriser avec Geogebra</a>
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
