--- a/home/templates/modelePage.html
+++ b/home/templates/modelePage.html
@@ -27,7 +27,8 @@ doit etre lu en haut de page -->
         <p>Compétences abordées :</p>
         {% block contenu %} {% endblock contenu %}
         <a href='https://www.youtube.com/channel/UCgCl1cAuhEa5RxCsV87cG4A/featured' target='_blank'>
-        <img src="{% static 'cours/images/general/youtubetoketa.png' %}" alt='youtube' width='15%' style='margin-top:1%;border-radius:5px;'></a></h2>       
+        <img src="{% static 'home/images/general/youtubetoketa.png' %}" alt='youtube' width='15%'' style='margin-top:1%;border-radius:5px;'>
+    </a>       
     </div>
 </section>
 
