--- a/home/templates/sources/maths/calcul/competence0.html
+++ b/home/templates/sources/maths/calcul/competence0.html
@@ -311,23 +311,16 @@
 </div>
 
 
-
-
-
+<!-- FICHE MEMO -->
 <h3>Fiche mémo</h3>
-<!-- 
-<div class="fieldsetDefinition">
-	<h4>FICHE MEMO ...</h4>
-	<p>\(\frac{2}{3}\times\frac{5}{7}=\frac{2\times 5}{3\times 7}\)</p>
-	<p>\(2\times\frac{5}{7}=\frac{2\times 5}{7}\)</p>
-	<p>\(\frac{2}{3}\div\frac{5}{7}=\frac{2\times 7}{3\times 5}\)</p>
-	<p>\(\frac{2}{3}+\frac{5}{3}=\frac{2+5}{3}\)</p>
-	<p>\(\frac{2}{3}+\frac{5}{7}=\frac{2\times 7}{3\times 7}+\frac{3\times 5}{3\times 7}\)</p>
+
+<div class="row">
+    <div class="col-12">
+		<iframe src="{% static 'home/documents/fiche_memo_fractions1.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+	</div>
 </div>
--->
 
-<iframe src='../../documents/fiche_memo_fractions1.pdf' height='1200px' type='application/pdf'></iframe>
-
+</div>
 </section>
 
 {% endblock cours %}
