--- a/home/templates/sources/maths/calcul/competence1.html
+++ b/home/templates/sources/maths/calcul/competence1.html
@@ -97,9 +97,14 @@
 
 <p>On retrouve donc la formule \(a^n \times a^{-n}=1\)</p>
 
-    <!-- FICHE MEMO -->
-    <h3>Fiche mémo</h3>
 
-    <iframe src='../../documents/fiche_memo_puissances.pdf' height='1200px' type='application/pdf'></iframe>
+<!-- FICHE MEMO -->
+<h3>Fiche mémo</h3>
+
+<div class="row">
+    <div class="my-3 col-12">
+        <iframe src="{% static 'home/documents/fiche_memo_puissances.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
