--- a/home/templates/sources/maths/calcul/competence4.html
+++ b/home/templates/sources/maths/calcul/competence4.html
@@ -22,7 +22,7 @@
 	Si on cherche la valeur absolue de \(x\), notée \(|x|\), on note alors M le point d'abscisse \(x\).<br/> 
 	\(|{x}|\) correspond à la distance du point M à l'origine O.</p>
 
-<img src="{% static 'home/images/quatrieme/valeurAbsolue.png' %}" width=35%>
+<img src="{% static 'home/images/maths/valeurAbsolue.png' %}" alt='valeur absolue' width=35%>
 
 
 <h3>Propriétés des valeurs absolues</h3>
@@ -86,8 +86,12 @@
 	</div>
 </div>
 
+
+<!-- FICHE MEMO -->
 <h3>Fiche mémo</h3>
 
-<iframe src='../../documents/valeurAbsolue.pdf' height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="my-3 col-12">
+		<iframe src="{% static 'home/documents/valeurAbsolue.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
 
 {% endblock cours %}
