--- a/home/templates/sources/maths/calcul/competence6.html
+++ b/home/templates/sources/maths/calcul/competence6.html
@@ -131,6 +131,9 @@ while j &lt borne_sup:
 	</div>
 </div>
 
+</div>
+</section>
+
 <section class="px-5 py-2 bg-gris">
     <div class="container">
 
@@ -198,10 +201,12 @@ while j &lt borne_sup:
 
 	<p><button class='bouton' type="submit" onclick="affichageConditionnel(this,'solution5');"> Voir la solution </button></p>
 
-<div id="solution5" style="display:none;">
-	<p>Oui car 6 est divisible par 1, 2, 3, 6 alors que 25 est divisible par 1, 5, 25. Ils n'ont donc aucun diviseur commun.</p>
+	<div id="solution5" style="display:none;">
+		<p>Oui car 6 est divisible par 1, 2, 3, 6 alors que 25 est divisible par 1, 5, 25. Ils n'ont donc aucun diviseur commun.</p>
+	</div>
+</div>
 
 </div>
-</div>
+</section>
 
 {% endblock cours %}
