--- a/home/templates/sources/maths/calcul/competence7.html
+++ b/home/templates/sources/maths/calcul/competence7.html
@@ -49,6 +49,9 @@ print(liste_diviseurs)</code></pre>
 	<p><strong>Défi 2 : </strong>écrire un programme Python qui décompose un nombre entier en facteurs premiers.</p>
 </div>
 	
+</div>
+</section>
+
 <section class="px-5 py-2 bg-gris">
     <div class="container">
 
@@ -74,7 +77,6 @@ print(liste_diviseurs)</code></pre>
 <div class="exerciceApplication">
 	<p><strong>A vous de jouer : </strong>Montrer que si a et b sont des multiples de c, alors a+b est un multiple de c.</p>
 </div>
-
 
 
 <!-- PARITE -->
@@ -151,12 +153,6 @@ print(liste_diviseurs)</code></pre>
     </div>
 </div>
 
-
-
-
-
-
-
 <div class="exerciceType">
 	<p><strong>Exercice type : </strong>Montrer que si a divise b et b divise c alors a divise c.</p>
 	<p>Solution : comme a divise b, il existe \(p \in \mathbb{Z}\) tel que \(b=pa\).</p>
@@ -200,9 +196,6 @@ print(liste_diviseurs)</code></pre>
 	<p>Un nombre est divisible par 5 si il se termine par 0 ou 5.</p>
 	<p>Un nombre est divisible par 10 si il se termine par 0.</p>
 </div>
-
-
-
 
 
 <!-- LES METHODES DE DEMONSTRATION -->
@@ -289,5 +282,8 @@ print(liste_diviseurs)</code></pre>
 <div class="exerciceApplication">
 	<p><strong>A vous de jouer : </strong>Montrer que \(7n^2+n\) est pair</p>
 </div>
+
+</div>
+</section>
 
 {% endblock cours %}
