--- a/home/templates/sources/maths/calcul/competence9.html
+++ b/home/templates/sources/maths/calcul/competence9.html
@@ -19,7 +19,7 @@
     <li>un encadrement : \(a \leq x &lt b\)</li>
     <li>une représentation graphique : </li>
 </ul>
-    <img src='../../images/maths/intervalle.png' alt='intervalle' width="30%">
+    <img src="{% static 'home/images/maths/intervalle.png' %}" alt='intervalle' width="30%">
 
 
 <p>On remarque que le crochet de la notation se referme sur \(a\) lorsque \(x\) est supérieur ou égal à \(a\).</p>
@@ -36,7 +36,7 @@
 
 <p>Pour déterminer la réunion de deux intervalles, il est prudent de les représenter graphiquement afin de bien visualiser le résultat.</p>
 
-<img src='../../images/maths/intersection.png' alt='intersection' width=40%> 
+<img src="{% static 'home/images/maths/intersection.png' %}" alt='intersection' width=40%> 
 
 <p>intersection : \([-3; 2[ \cap [1; +\infty[=[1; 2[\)</p> 
 <p>réunion : \([-3; 2[ \cup [1; \infty[=[-3; +\infty[\)</p>
