--- a/home/templates/sources/maths/calcul_litteral/competence2.html
+++ b/home/templates/sources/maths/calcul_litteral/competence2.html
@@ -30,7 +30,7 @@
 
 <div class="exerciceApplication">
 	<p><strong>A vous de jouer : </strong>démontrer la 1ère identité remarquable à l'aide d'un calcul de surface en utilisant le dessin ci-dessous</p>
-	<img src="../../images/maths/idRemarquable.png" alt="identités remarquables" width=10%%>
+	<img src="{% static 'home/images/maths/idRemarquable.png' %}" alt="identités remarquables" width=10%%>
 </div>
 
 
