--- a/home/templates/sources/maths/calcul_litteral/competence5.html
+++ b/home/templates/sources/maths/calcul_litteral/competence5.html
@@ -209,12 +209,9 @@ qu'on obtient par le calcul, qui permet de choisir la bonne formule pour la solu
 	<p>Comme \(\Delta>0\), on en déduit les solutions \(\frac{10-2\sqrt{19}}{4}=\frac{5-\sqrt{19}}{2}\) et \(\frac{5+\sqrt{19}}{2}\)</p>
 </div>
 
-
-
 <div class="exerciceApplication">
 	<p><strong>Exercice type : </strong>résoudre l'équation \(3x^2+2x-5=0\)</p>
 </div>
-
 
 
 <!-- STRATEGIE -->
@@ -266,7 +263,7 @@ qu'on obtient par le calcul, qui permet de choisir la bonne formule pour la solu
 <!-- FICHE MEMO -->
 <h3>Fiche mémo</h3>
 
-<iframe src='../../documents/fiche_memo_equations_degre2.pdf' height='1200px' type='application/pdf'></iframe>
+<iframe src="{% static 'home/documents/fiche_memo_equations_degre2.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
 
 </div>
 </section>
