--- a/home/templates/sources/maths/calcul_litteral/competence8.html
+++ b/home/templates/sources/maths/calcul_litteral/competence8.html
@@ -27,7 +27,7 @@
 
 	<p>Cherchons à résoudre l'équation \(|x-5|=2\)</p>
 	<p>Résoudre \(|x-5|=2\) revient à trouver les valeurs de \(x\) pour lesquelles la distance de \(x\) à 5 vaut 2.</p>
-	<img src="../../images/maths/equation_valeurAbs.png" alt="résolution équation avec valeur absolue" width=25%>
+	<img src="{% static 'home/images/maths/equation_valeurAbs.png' %}" alt="résolution équation avec valeur absolue" width=25%>
 	<p>Ainsi, \(x\) peut prendre la valeur 3 ou la valeur 7.</p>
 
 	<p>On se rappellera que résoudre une équation de degré 1 comportant des valeurs absolues revient à trouver deux solutions 
@@ -61,8 +61,6 @@
 </div>
 
 
-
-
 <!-- INEQUATIONS AVEC VALEUR ABSOLUE -->
 <h3>Résolution d'inéquation comportant une valeur absolue</h3>
 
@@ -71,7 +69,7 @@
 <div class="exerciceType">
 	<p><strong>Exercice type :</strong> résoudre l'inéquation \(|x-5|&lt2\)</p>
 	<p>Résoudre \(|x-5|&lt2\) revient à trouver les valeurs de \(x\) pour lesquelles la distance de \(x\) à 5 est strictement inférieure à 2.</p>
-	<img src="../../images/maths/equation_valeurAbs.png" alt="résolution équation avec valeur absolue" width=25%>
+	<img src="{% static 'home/images/maths/equation_valeurAbs.png' %}" alt="résolution équation avec valeur absolue" width=25%>
 	<p>Ainsi, \(x\) peut prendre toutes les valeurs entre 3 et 7.</p>
 	<p>\(S=]3; 7[\)</p>
 </div>
@@ -83,7 +81,7 @@
 <div class="exerciceType">
 	<p><strong>Exercice type :</strong> résoudre l'inéquation \(|x-5|\geq2\)</p>
 	<p>Résoudre \(|x-5|\geq2\) revient à trouver les valeurs de \(x\) pour lesquelles la distance de \(x\) à 5 est supérieure ou égale à 2.</p>
-	<img src="../../images/maths/equation_valeurAbs.png" alt="résolution équation avec valeur absolue" width=25%>
+	<img src="{% static 'home/images/maths/equation_valeurAbs.png' %}" alt="résolution équation avec valeur absolue" width=25%>
 	<p>Ainsi, \(x\) peut prendre toutes les valeurs inférieures ou égales à 3 et toutes les valeurs supérieures ou égales à 7.</p>
 	<p>\(S=]-\infty; 3]\cup[7; +\infty[\)</p>
 </div>
