--- a/home/templates/sources/maths/calcul_litteral/competence9.html
+++ b/home/templates/sources/maths/calcul_litteral/competence9.html
@@ -13,7 +13,7 @@
 
 <div class="exemple">
 <p>Dans une usine de fabrication de boîtes de maïs, on prend une boîte de conserve, on verse le maïs dans cette boîte, on ferme ensuite la boîte pour lui ajouter un emballage et la commercialiser. L'élément de départ est la boîte vide, l'élément d'arrivée est la boîte de conserve à distribuer, les étapes de production pour passer de l'une à l'autre correspondent à une fonction.</p>
-    <img src="../../images/maths/boiteConserve2.png" alt="fonction boite de conserve" width=50%>
+    <img src="{% static 'home/images/maths/boiteConserve2.png' %}" alt="fonction boite de conserve" width=50%>
 </div>
 
     <p>En mathématiques, on modélise des situations similaires en utilisant une fonction qu'on pourra appeler 
@@ -27,7 +27,7 @@
 </div>
 
 <p>Par exemple, si on multiplie un nombre par 2 puis on ajoute 3 au résultat, la fonction associée pourrait s'écrire \(f\) telle que \(f(x)=2x+3\). L'ordre des calculs est important et doit respecter la priorité des opérations.</p>
-    <img src="../../images/maths/definitionFonction.png" alt="exemple fonction" width=45%>
+    <img src="{% static 'home/images/maths/definitionFonction.png' %}" alt="exemple fonction" width=45%>
 
 
 <div class="fieldsetDefinition">
