--- a/home/templates/sources/maths/statistiques/competence6.html
+++ b/home/templates/sources/maths/statistiques/competence6.html
@@ -13,11 +13,11 @@
     nombre de tentatives, afin de comprendre que les probabilités correspondent en fait à une loi 
     dite loi des grands nombres. Nous allons pour cela apprendre à constuire un code Python 
     qui calcule le nombre de tirages d'un chiffre</p>
-
+    
 <div class="row">
-<div class="my-5 col-12">
-<embed src="{% static 'home/documents/TP_tirage_sort.pdf' %}" height='1200px' type='application/pdf'/>
-</div>
+    <div class="my-5 col-12">
+        <iframe src="{% static 'home/documents/TP_tirage_sort.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
 </div>
 
 {% endblock cours %}
