--- a/home/templates/sources/nsi/architecture/competence10.html
+++ b/home/templates/sources/nsi/architecture/competence10.html
@@ -3,215 +3,16 @@
 
 {% block contenu %} 
 <ul>
-    <li>découvrir la vision numérique à travers la vision humaine</li>
-	<li>comprendre le fonctionnement d'une image numérique</li>
-	<li>prendre conscience des risques du numérique</li>
-	<li>connaître le droit à l'image</li>
+    
 </ul>
 {% endblock contenu %}
 
 {% block cours %}
 
-<!-- INTRODUCTION -->
-
-<h3>Introduction</h3>
-
-<p>La vidéo suivante publiée par <em>Fun Mooc</em> sur YouTube explique le fonctionnement des photographies numériques :
-
-<a href="https://www.youtube.com/watch?v=UnNPNc-F9ks&feature=emb_logo" target="_blank">&#127911; vidéo photographie numérique - Fun Mooc YouTube</a></p>
-
-
-
-<h3>Bref historique</h3>
-
-<ul>
-	<li>1826 : naissance de l'argentique</li>
-	<li>1900 : apparition de la photographie couleur</li>
-	<li>1975 : premier appareil numérique grand public</li>
-	<li>1990 : premier logiciel de retouche photo grand public</li>
-	<li>2007 : premier smartphone équipé d'un appareil photographique</li>
-</ul>
-
-
-<h3>Au commencement, La vision humaine</h3>
-
-<p>La photographie numérique se base sur la perception des couleurs par l'oeil, sur la mise au point d'une image nette 
-	par le cerveau pour fournir des images de qualité. Le cerveau réalise une synthèse additive des 3 couleurs primaires (rouge, vert, bleu) 
-pour ne percevoir finalement qu'une seule couleur élémentaire.</p>
-<p>La vidéo suivante publiée par <em>l'Inserm</em> sur YouTube explique le fonctionnement de l'oeil :
-
-	<a href="https://youtu.be/sYLA6U1boF8" target="_blank">&#127911; vidéo Au coeur des organes l'oeil et la vision - Inserm YouTube</a></p>
-
-
-<!-- L'IMAGE NUMERIQUE -->
-
-<h3>L'image numérique</h3>
-
-<p>Une image est formée d’une multitude de pixels, qui sont des petits carrés élémentaires.</p>
-<img src="../../images/snt/raster.png" alt="couches Internet" width=15%>
-
-<p>Ainsi, lorsqu’on parle de la résolution d’une image, on mesure la quantité de pixels en largeur multipliée 
-	par la quantité de pixels en hauteur, soit par exemple 1600 x 1200. Dans ce cas, on dispose donc de 1 920 000 
-	pixels. La résolution permet de quantifier la netteté d’une image.</p>
-
-<p>Microsoft Windows conseille la résolution suivante en fonction de la taille des écrans LCD :</p>
-
-<table style="width:30%;">
-	<tr><td>15''</td><td>1024 x 768</td></tr>
-	<tr><td>17''</td><td>1280 x 1024</td></tr>
-	<tr><td>19''</td><td>1280 x 1024</td></tr>
-	<tr><td>21''</td><td>1600 x 1200</td></tr>
-</table>
-
-<p>Chaque pixel est lui-même composé de lumières rouges, vertes et bleues, dont les intensités varient pour fournir une couleur 
-	élémentaire par pixel. C'est cette variation d'intensité de chaque couleur de base qui permet de créer une image.</p>
-<img src="../../images/snt/pixel.png" alt="couches Internet" width=15%>
-
-<p>Lorsqu'on choisit une couleur élémentaire pour une site ou une application, on utilise principalement les notations 
-	RGB et hexadécimales. Par exemple cette <span style="background-color:#ccff99;">couleur</span> s'écrit soit 
-	rgb(204, 255, 153) soit #ccff99 en hexadécimal. Pour choisir la couleur qui vous convient le mieux, il suffit de 
-vous rendre sur un site tel que 
-<a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">HTML Color Picker</a></p>
-</p>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong> expliquez pourquoi un pixel est codé sur trois octets.</p>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/TP_objets_connectes.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
 </div>
 
-<div class=fieldsetDefinition>
-	<h4>A RETENIR ...</h4> 
-	<p>Les trois couleurs de base sont rouge, vert et bleu (RGB). </p>
-</div>
-
-
-<!-- LES RISQUES DU NUMERIQUE -->
-
-<h3>Les risques du numérique</h3>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>selon vous quels sont les principaux risques relatifs à la photographie 
-	numérique ?</p>
-</div>
-
-<p>Avec l'ère du numérique, plus personne ne se pose de question pour prendre des photographies. Si la qualité ou le 
-	résultat ne correspond pas aux attentes, il suffit de l'effacer de la mémoire de son smartphone. Toutefois, plusieurs 
-	questions peuvent se poser :</p>
-
-<ul>
-	<li>comment lire une photographie enregistrée sur un support qui ne correspond plus aux standards actuels ? 
-		Cette photographie n'est pas loin d'être perdue si on ne peut plus la visionner avec les moyens actuels. Il
-		 n'a jamais été pris tant de photographies que depuis l'ère du numérique, pourtant de nombreuses photographies 
-		 sont simplement vouées à disparaître.</li>
-	<li>la quantité importante de photographies stockées sur le Cloud constitue-t-elle une pollution réelle et un 
-		risque de réchauffement de la planète ?</li>
-	<li>il est devenu tellement facile de modifier une photographie, que plus personne n'est à l'abri d'actes malveillants 
-		utilisant des photographies. En particulier, le droit à l'image est devenu un terrain sensible et difficile à 
-	gérer.</li>
-</ul>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>quelles techniques utilisez-vous pour déceler les photographies truquées sur le Web ?</p>
-</div>
-
-<p>Les fake news regorgent de montages truqués sous forme de vidéos ou de photographies. La vidéo suivante publiée par <em>Le Temps</em> sur YouTube donne trois conseils pour trouver des photographies 
-	mensongères sur Internet :
-<a href="https://youtu.be/SkEDb540pWA" target="_blank">&#127911; vidéo |Trois conseils pour débusquer les photos mensongères sur Internet - Le Temps YouTube</a></p>
-	
-
-<!-- LE DROIT A L'IMAGE -->
-
-<h3>Le droit à l'image</h3>
-
-<p>L’article 9 du Code civil dispose que chacun a droit au respect de sa vie privée.</p>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>quelle différence faites-vous entre le copyright, la licence, les 
-		droits d'auteurs, les marques commerciales et les brevets ?</p>
-</div>
-
-<p>"Le droit à l'image permet d'autoriser ou de refuser la reproduction et la diffusion publique de votre image. Par ailleurs le droit au respect de votre 
-	vie privée permet d'autoriser ou de refuser la divulgation d'informations concernant votre vie privée. Vous avez aussi droit à la protection de votre 
-	image en tant que donnée personnelle: Toute information sur une personne physique identifiée ou identifiable 
-	directement ou indirectement. Par exemple, nom, photo, empreinte, numéro de téléphone, numéro de sécurité 
-	sociale.. Dans ce cadre, vous pouvez demander la suppression d'une photo sur un site internet. C'est ce qu'on 
-	appelle le droit à l'effacement ou droit à l'oubli." (source <em>service-public.fr</em>)</p>
-
-<p>Ainsi "toute personne a sur son image et sur l'utilisation qui en est faite un droit exclusif et peut s'opposer à 
-	sa diffusion sans son autorisation". La reproduction, la publication, l'exposition d'une image nécessitent le 
-consentement écrit de la personne propriétaire ou concernée par l'image par le biais d'un contrat.</p>
-
-<p>Pour mieux comprendre le droit à l'image rendez-vous sur le 
-	<a href="https://www.service-public.fr/particuliers/vosdroits/F32103" target="_blank">&#127911; lecture | site du Service Public</a>.</p>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong> résumez en quelques lignes ce que vous avez retenu du droit à l'image.</p>
-</div>
-
-<p>Certaines images, en revanche, ne sont pas soumises à l'autorisation des personnes :</p>
-<ul>
-	<li>les images relatives à l'actualité au nom du droit de l'information</li>
-	<li>les images de personnes publiques dans l'exercice de leur activité</li>
-	<li>les images relatives aux faits historiques</li>
-</ul>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>où peut-on trouver des images libres de droit ?</p>
-</div>
-
-<p>L’article 226-1 du code pénal punit d'un an d'emprisonnement et 45 000 euros d'amende le fait de porter 
-	atteinte à l'intimité de la vie privée d'autrui en fixant, enregistrant ou transmettant, sans le consentement 
-	de celle-ci, l'image d'une personne se trouvant dans un lieu privé.</p>
-
-<p>L’article 226-8 du code pénal punit d'un an emprisonnement et de 15 000 euros d'amende le fait de publier, par 
-	quelque voie que ce soit, le montage réalisé avec l'image d'une personne sans son consentement, s'il 
-	n'apparaît pas à l'évidence qu'il s'agit d'un montage ou s'il n'en est pas expressément fait mention.</p>
-
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>la publication de photographies prises sur un lieu public est-elle 
-		soumise à autorisation (commune, personnes présentes sur l'image) ?</p>
-</div>
-
-
-
-
-<h4>Les outils de vérification d'images</h4>
-
-<p>Le plagiat concerne les images tout autant que les textes. Il est passible durant les études de la note 0. 
-	Dans le milieu professionnel, les métadonnées d'une photographie permettent d'en identifier l'auteur, de fournir 
-	la date de création, le poids de l'image et le support utilisé. Le recours au filigrane Watermark permet 
-	également d'éviter l'utilisation non autorisée d'une photographie.</p>
-
-<p>Il existe par ailleurs des outils en ligne tels que TinEye pour vérifier si une image n'a pas déjà été publiée, 
-	et FotoForensics pour identifier les photographies truquées.</p>
-
-<h4>La licence Creative Commons</h4>
-
-<p>Le licence Creative Commons propose un partage simplifié des créations (documents, images, ...), légalisé et 
-	libre de droits.</p>
-
-<p>Pour bien comprendre le principe de Creative Commons, se rendre sur le site 
-	<a href="https://creativecommons.org/" target="_blank">&#127911; lecture | creativecommons.org</a></p>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>expliquez comment procéder pour créer un document sous la licence Creative 
-		Commons.</p>
-</div>
-
-<h4>Pour aller plus loin...</h4>
-
-<p>Le progrès technologique permet maintenant de développer des Augmented Reality Glasses, plus réactives que des 
-	smartphones, plus légères que des caméras de type Go-Pro. Cela peut créer une réelle avancée dans le traitement 
-	des données en temps réel, mais il devient de plus en plus difficile de contrôler le droit à l'image avec 
-	ces technologies. Par exemple Meta s'est associé avec Ray-Ban pour développer et vendre le concept Ray-ban Stories, 
-	comprenant une paire de lunettes associée à une caméra et un système informatique embarqué.</p>
-
-<p>Pour imaginer les avantages de cette technologie, voici le film promotionnel de Ray-Ban Meta publié sur YouTube  
-<a href="https://creativecommons.org/" target="_blank">&#127911; vidéo | Ray-Ban Stories - Meta</a></p>
-
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>expliquez à l'aide d'exemples concrets les avantages et les risques d'une telle 
-	technologie.</p>
-</div>
-	
 {% endblock cours %}
