--- a/home/templates/sources/nsi/architecture/competence15.html
+++ b/home/templates/sources/nsi/architecture/competence15.html
@@ -9,6 +9,12 @@
 
 {% block cours %}
 
-<iframe src='../../documents/TP_geolocalisation.pdf' height='1200px' type='application/pdf'></iframe>
+<p><em>Travail Pratique proposé par T. Morel.</em></p>
+
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/TP_localisation.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
