--- a/home/templates/sources/nsi/donnees_structurees/competence1.html
+++ b/home/templates/sources/nsi/donnees_structurees/competence1.html
@@ -193,10 +193,13 @@ sinon il faut préciser l'adresse absolue (ou relative) complète du fichier bdd
 </div>
 
 
-
-
+<!-- ACTIVITES -->
 <h3>Activité</h3>
 
-<iframe src='../../documents/TP_format_ouvert.pdf' height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/TP_format_ouvert.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
