--- a/home/templates/sources/nsi/donnees_structurees/competence11.html
+++ b/home/templates/sources/nsi/donnees_structurees/competence11.html
@@ -38,7 +38,7 @@ Un graphe est connexe, si pour tout couple de sommets on peut trouver une chaîn
 Un graphe est complet si chacun de ses sommets est directement reliés à tous les autres sommets.</p>
 </div>
 
-<img src="../../images/nsi/graphe.png" alt="graphe" width=30%>
+<img src="{% static 'home/images/nsi/graphe.png' %}" alt="graphe" width=30%>
 
 <p>Par exemple, dans le graphe représenté ci-dessus :
 <ul>
