--- a/home/templates/sources/nsi/donnees_structurees/competence12.html
+++ b/home/templates/sources/nsi/donnees_structurees/competence12.html
@@ -21,7 +21,7 @@
 
 <div class="exerciceType">
 	<p><strong>Exercice type : </strong>déterminer la matrice d'adjacence du graphe ci-dessous :</p>
-	<img src="../../images/nsi/graphe.png" alt="graphe" width=30%>
+	<img src="{% static 'home/images/nsi/graphe.png' %}" alt="graphe" width=30%>
 	<p>La matrice représentera les sommets ordonnés par ordre alphabétiques de A jusqu'à F. On voit par exemple que A est en relation avec B et D. Il faudra donc mettre 1 dans les colonnes correspondantes.<br/>
 	\(\begin{pmatrix}
 	0&1&0&1&0&0 \\
@@ -55,7 +55,7 @@
 
 <div class="exerciceApplication">
 	<p><strong>A vous de jouer : </strong>déterminer la matrice d'adjacence du graphe ci-dessous :</p>
-	<img src="../../images/nsi/adjacence.png" alt="graphe" width=30%>
+	<img src="{% static 'home/images/nsi/adjacence.png' %}" alt="graphe" width=30%>
 </div>
 
 
@@ -71,7 +71,7 @@
 
 <div class="exerciceType">
 	<p><strong>Exercice type : </strong>déterminer la liste des successeurs et la liste des prédécesseurs du graphe ci-dessous :</p>
-	<img src="../../images/nsi/listeAdjacence.png" alt="graphe" width=30%>
+	<img src="{% static 'home/images/nsi/listeAdjacence.png' %}" alt="graphe" width=30%>
 	<p>S'agissant d'un graphe orienté, nous établissons le tableau suivant :</p>
 	<table>
 		<tr><th>sommet</th><th>liste de successeurs</th><th>liste de prédécesseurs</th></tr>
@@ -120,7 +120,7 @@
 
 <div class="exerciceApplication">
 	<p><strong>Exercice type : </strong>déterminer la liste des successeurs et la liste des prédécesseurs du graphe ci-dessous :</p>
-	<img src="../../images/nsi/listeAdjacence2.png" alt="graphe" width=30%>
+	<img src="{% static 'home/images/nsi/listeAdjacence2.png' %}" alt="graphe" width=30%>
 </div>
 
 <p>Il est parfois utile de créer un script Python permettant de passer d'une liste de successeurs à une liste 
