--- a/home/templates/sources/nsi/donnees_structurees/competence2.html
+++ b/home/templates/sources/nsi/donnees_structurees/competence2.html
@@ -113,10 +113,14 @@ organisées en tables.</p>
 <p>Les métadonnées d'une page Web sont également accessibles, en utilisant le Mode Développeur du navigateur, et en lisant le contenu de la balise &lthead&gt,</p>
 
 
+<!-- ACTIVITE -->
 <h3>Activité</h3>
 
-<iframe src='../../documents/TP_donnees_structurees.pdf' height='1200px' type='application/pdf'></iframe>
-
+<div class="row">
+    <div class="col-12">
+		<iframe src="{% static 'home/documents/TP_donnees_structurees.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+	</div>
+</div>
 {% endblock cours %}
 
    
