--- a/home/templates/sources/nsi/donnees_structurees/competence4.html
+++ b/home/templates/sources/nsi/donnees_structurees/competence4.html
@@ -294,6 +294,8 @@ contenus_commandes(id_contenu, ref_commande, ref_produit, quantite)</code></pre>
 </ul>
 </div>
 
+<p class="separateur"></p>
+
 <div class="exerciceApplication">
 	<p><strong>Exercice 2 : </strong></p>
 	<p>Une base de données est constituée des tables suivantes :</p>
@@ -312,6 +314,8 @@ programmes(id_programme, date, ref_representation, tarif)</code></pre>
 	<li>les dates des représentations dont le tarif est inférieur à 50 €</li>
 </ul>
 </div>
+
+<p class="separateur"></p>
 
 <div class="exerciceApplication">
 	<p><strong>Exercice 3 : </strong></p>
