--- a/home/templates/sources/nsi/internet/competence1.html
+++ b/home/templates/sources/nsi/internet/competence1.html
@@ -9,14 +9,11 @@
 
 {% block cours %}
 
-<section class="px-5 bg-white">
-<div class="container">
-
-<p><em>Travail Pratique proposé par T. Morel.</em></p>
-
-<iframe src="{% static 'home/documents/TP_internetReseau.pdf' %}" height='1200px' type='application/pdf'></iframe>
-
+<div class="row">
+    <div class="col-12">
+        <p><em>Travail Pratique proposé par T. Morel.</em></p>
+        <iframe src="{% static 'home/documents/TP_internetReseau.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
 </div>
-</section>
 
 {% endblock cours %}
