--- a/home/templates/sources/nsi/internet/competence11.html
+++ b/home/templates/sources/nsi/internet/competence11.html
@@ -23,10 +23,8 @@
 </div>
 
 
-
+<!-- LA CYBERCRIMINALITE PEUT PRENDRE DIFFERENTES FORMES -->
 <h3>La cybercriminalité peut prendre différentes formes</h3>
-
-
 
 <p>Les principales menaces en cybercriminalité sont les suivantes :</p>
 	<ul>
@@ -170,8 +168,11 @@ l'entreprise pour laquelle il travail, un membre de sa famille, une personne en 
 
 <h4>Exemple d'analyse de vulnérabilié</h4>
 
-<iframe src="{% static 'home/documents/Analyse_cross_site_scripting.pdf' %}" height='1200px' type='application/pdf'></iframe>
-
+<div class="row">
+    <div class="col-12">
+		<iframe src="{% static 'home/documents/Analyse_cross_site_scripting.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+	</div>
+</div>
 
 <h3>Se tester</h3>
 
