--- a/home/templates/sources/nsi/internet/competence14.html
+++ b/home/templates/sources/nsi/internet/competence14.html
@@ -186,8 +186,14 @@ inscrit 0 dans la matrice.</p>
             e) Quel serait le diamètre de ce réseau si Françoise et Emin étaient amis ?</p>
     </div>
 
+
+<!-- FICHE MEMO -->
 <h3>Fiche mémo</h3>
 
-<iframe src="{% static 'home/documents/memo_reseaux_sociaux.pdf' %}" height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/memo_reseaux_sociaux.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
