--- a/home/templates/sources/nsi/internet/competence7.html
+++ b/home/templates/sources/nsi/internet/competence7.html
@@ -62,7 +62,6 @@ et de la fin de courbe&lt/p&gt</code></pre>
 <p>On remarque que le code est bien organisé à l'aide de balises qui permettent de donner des instructions à l'ordinateur, pour différencier les parties de langage avec le contenu du site. Ainsi, il est possible d'appliquer le même traitement à ce qui se trouve entre deux balises identiques.</p>
 
 
-
 <!-- Les titres et paragraphes -->
 <h3>Les titres et paragraphes</h3>
 
@@ -99,7 +98,7 @@ pour faire travailler la courbe des skis et conduire le virage.&lt/p&gt</code></
 
 <p>Votre site ressemble pour l'instant à ceci :</p>
 
-<img src='../../images/web/site_web1.png' alt='site web' style='border:3px solid black;' width="70%">
+<img src="{% static 'home/images/web/site_web1.png' %}" alt='site web' style='border:3px solid black;' width="70%">
 
 <p>A noter que votre site n'est actuellement pas présent sur Internet, il n'est hébergé par aucun serveur, il est uniquement lu par votre navigateur comme si il provenait d'Internet.</p>
 
