--- a/home/templates/sources/nsi/internet/competence9.html
+++ b/home/templates/sources/nsi/internet/competence9.html
@@ -63,8 +63,13 @@
      ou transferts de Bitcoin.</p>
 </div>
 
+<!-- FICHE MEMO -->
 <h3>Fiche mémo</h3>
 
-<iframe src="{% static 'home/documents/memo_p2p.pdf' %}" height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/memo_p2p.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
