--- a/home/templates/sources/python/progresser/competence0.html
+++ b/home/templates/sources/python/progresser/competence0.html
@@ -33,7 +33,7 @@ gyroscope; picture-in-picture" allowfullscreen> </iframe>
 
 <p>Si vous avez déjà pratiqué la programmation en Scratch, le script ci-dessus correspond en fait au code Scratch suivant que vous connaissez bien</p>
 
-<img src="{% static 'home/images/snt/codeScratchFor.png' %}" width="15%">
+<img src="{% static 'home/images/python/codeScratchFor.png' %}" width="15%" alt="code scratch">
 
 <p>Dans l'instruction <strong>for i in range(5):</strong>, i va prendre les valeurs entières comprises entre 0 et 4.
 Il y aura de ce fait 5 répétitions de l'instruction <strong>print("bonjour")</strong>. En fait, l'instruction
