--- a/home/templates/sources/maths/calcul_litteral/competence10.html
+++ b/home/templates/sources/maths/calcul_litteral/competence10.html
@@ -14,7 +14,7 @@
 <h4>Pente</h4>
 
 <p>La pente est le rapport entre la hauteur parcourue divisé par la distance horizontale parcourue. Dans le dessin ci-dessous, la pente est donc \(pente = \frac{h}{d}\)</p>
-<p><img src="../../images/maths/pente.png" alt="pente"></p>
+<p><img src="{% static 'home/images/maths/pente.png' %}" alt="pente"></p>
 
 <p>En trigonométrie \(tan (\alpha) = \frac{h}{d}\). Ainsi la pente correspond en fait à \(tan (\alpha)\)</p>
 
@@ -26,7 +26,7 @@
 
 	<div class="exemple">
 	<p><em>Exemple : </em> La fonction \(f\) définie par \(f(x)=2x+3\) coupe l'axe vertical en 3, et sa pente est de 2 c'est à dire que si on avance de 1 unité horizontalement, on monte de 2 unités verticalement (\(\frac{2}{1}=2\)). On peut donc dessiner la courbe représentative de \(f\) facilement, sans calcul et sans utiliser de tableau de valeurs.</p>
-	<img src="../../images/maths/courbeAffine.png" alt="courbe affine">
+	<img src="{% static 'home/images/maths/courbeAffine.png' %}" alt="courbe affine">
 </div>
 
 <div class="exerciceType">
@@ -34,7 +34,7 @@
 Tracer la courbe représentative de la fonction \(f\) définie par \(f(x)=x-2\)</strong></p>
 <p>Solution :<br/>
 	La pente de cette fonction vaut 1 et l'ordonnée à l'origine vaut -2. On obtient donc la courbe suivante</p>
-	<img src="../../images/maths/exempleCourbeAffine.png" alt="courbe affine">
+	<img src="{% static 'home/images/maths/exempleCourbeAffine.png' %}" alt="courbe affine">
 </div>
 
 <div class="exerciceApplication">
@@ -47,7 +47,7 @@ Tracer la courbe représentative de la fonction \(f\) définie par \(f(x)=x-2\)<
 <h4>Fonction linéaire</h4>
 
 	<p>Notons qu'une fonction linéaire \(f\) est une fonction affine particulière dont l'ordonnée à l'origine vaut 0. Elle est donc de la forme \(f(x)=ax\). Ainsi la courbe d'une fonction linéaire passe par l'origine O du repère, et une fonction linéaire représente une situation de proportionnalité.
-		<img src="../../images/maths/fonctionLineaire.png" alt="fonction linéaire"></p>
+		<img src="{% static 'home/images/maths/fonctionLineaire.png' %}" alt="fonction linéaire"></p>
 
 <h4>Fonction constante</h4>
 
@@ -60,14 +60,14 @@ Tracer la courbe représentative de la fonction \(f\) définie par \(f(x)=x-2\)<
 
 	<div class="exemple">
 	<p><em>Exemple : </em> La fonction \(f\) représentée par la courbe ci-dessous est une droite qui coupe l'axe vertical en 3. Son ordonnée à l'origine est donc 3. A partir du point (0; 3) si on avance de 1 horizontalement, il faut monter de 2 verticalement pour atteindre la courbe. Ainsi, la pente de cette droite est 2.</p>
-	<img src="../../images/maths/courbeAffine.png" alt="courbe affine">
+	<img src="{% static 'home/images/maths/courbeAffine.png' %}" alt="courbe affine">
 	<p>On en déduit que la fonction \(f\) peut s'écrire sous la forme \(f(x)=2x+3\).</p>
 </div>
 
 <div class="exerciceType">
 <p><strong>Exercice type : <br/>
 A partir du graphe ci-dessous représentant une fonction \(f\), trouver la pente et l'ordonnée à l'origine. En déduire l'expression algébrique de cette fonction.</strong></p>
-<img src="../../images/maths/exerciceTypeEquationFonctionAffine.png" alt="courbe affine">
+<img src="{% static 'home/images/maths/exerciceTypeEquationFonctionAffine.png' %}" alt="courbe affine">
 <p>Solution :<br/>
 	La courbe de la fonction coupe l'axe horizontal en -3. L'ordonnée à l'origine vaut donc -3. Si on avance de 1 horizontalement, il faut monter de 5 verticalement pour atteindre la courbe. La pente vaut donc 5. Ainsi l'expression algébrique de cette fonction est \(f(x)=5x-3\).</p>
 </div>
@@ -75,9 +75,9 @@ A partir du graphe ci-dessous représentant une fonction \(f\), trouver la pente
 <div class="exerciceApplication">
 <p><strong>A vous de jouer :</strong><br/>
 	1. Trouver l'expression algébrique de la fonction dont la courbe représentative est la suivante<br/>
-	<img src="../../images/maths/exAppliPente1.png" alt="courbe affine" style="margin:2%;"><br/>
+	<img src="{% static 'home/images/maths/exAppliPente1.png' %}" alt="courbe affine" style="margin:2%;"><br/>
 	2. Trouver l'expression algébrique de la fonction dont la courbe représentative est la suivante<br/>
-<img src="../../images/maths/exAppliPente2.png" alt="courbe affine" style="margin:2%;"></p></div>
+<img src="{% static 'home/images/maths/exAppliPente2.png' %}" alt="courbe affine" style="margin:2%;"></p></div>
 
 <h4>Trouver l'expression d'une fonction affine passant par deux points</h4>
 
