--- a/home/templates/sources/maths/statistiques/competence3.html
+++ b/home/templates/sources/maths/statistiques/competence3.html
@@ -17,10 +17,13 @@
 </div>
 
 
+<!-- FICHE MEMO -->
 <h3>Fiche mémo</h3>
 
-<div class="col-12 col-md-8 my-5">
-<iframe src="{% static 'home/documents/quartiles.pdf'%}" height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/quartiles.pdf'%}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
 </div>
 
 <!-- SANS LA CALCULATRICE -->
