--- a/home/templates/sources/nsi/architecture/competence12.html
+++ b/home/templates/sources/nsi/architecture/competence12.html
@@ -9,6 +9,10 @@
 
 {% block cours %}
 
-<iframe src='../../documents/TP_gimp.pdf' height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/TP_photographie.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
