--- a/home/templates/sources/nsi/internet/competence4.html
+++ b/home/templates/sources/nsi/internet/competence4.html
@@ -9,8 +9,11 @@
 
 {% block cours %}
 
-<p><em>Travail Pratique proposé par T. Morel.</em></p>
-
-<iframe src="{% static 'home/documents/TP_DNS.pdf' %}" height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <p><em>Travail Pratique proposé par T. Morel.</em></p>
+        <iframe src="{% static 'home/documents/TP_DNS.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
