--- a/home/templates/sources/nsi/internet/competence5.html
+++ b/home/templates/sources/nsi/internet/competence5.html
@@ -24,8 +24,6 @@
 
     <p>En résumé, Internet est un réseau, une infrastructure, alors que le Web est un service sur ce réseau.</p>
 
-    
-
 
     <!-- Clients-serveurs-->
 
@@ -61,11 +59,15 @@
 
 <p>On peut résumer à l'aide du schéma ci-dessous comment s'effectue votre requête : </p>
 
+
+<!-- FICHE MEMO -->
 <h3>Fiche mémo</h3>
 
-
-<iframe src="{% static 'home/documents/memo_web.pdf' %}" height='1200px' type='application/pdf'></iframe>
-
-<iframe src="{% static 'home/documents/memo_web2.pdf' %}" height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/memo_web.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+        <iframe src="{% static 'home/documents/memo_web2.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
