--- a/home/templates/sources/python/avance/competence2.html
+++ b/home/templates/sources/python/avance/competence2.html
@@ -282,6 +282,11 @@ print("intelligence snoggletog : ", snoggletog.intelligence)</code></pre>
 	ville et code_postal. Créer une classe Personne dont les objets sont représentés par des attributs publics de type chaine de caractères nom, prenom, un attribut privé de type entier age.<br/>
 	1. proposer des setters et getters permettant d'accéder et de modifier les différents attributs <br/>
 	2. représenter ces deux classes dans un tableau permettant de visualiser les attributs et méthodes.</p>
+</div>
+
+<p class="separateur"></p>
+
+<div class="exerciceApplication">
 	<p><strong>Exercice 2 : </strong>quel est l'affichage en réponse au code suivant ?</p>
 	<pre><code class="language-python">class Dragon:
 	def __init__(self, id):
@@ -289,6 +294,11 @@ print("intelligence snoggletog : ", snoggletog.intelligence)</code></pre>
 
 td = Dragon("thunderdrum")
 print(td.id)</code></pre>
+</div>
+
+<p class="separateur"></p>
+
+<div class="exerciceApplication">
 	<p><strong>Exercice 3 : </strong>quel est l'affichage en réponse au code suivant ?</p>
 	<pre><code class="language-python">class Dragon:
 		def __init__(self, id="snogglelog"):
@@ -296,6 +306,11 @@ print(td.id)</code></pre>
 	
 	td = Dragon("thunderdrum")
 	print(td.id)</code></pre>
+</div>
+
+<p class="separateur"></p>
+
+<div class="exerciceApplication">
 	<p><strong>Exercice 4 : </strong>faut-il rajouter un paramètre après le self de la méthode montrer dans le code suivant ?</p>
 	<pre><code class="language-python">class Jeu:
 	def __init__(self, score):
@@ -306,6 +321,11 @@ print(td.id)</code></pre>
 
 	pendu = Jeu()
 	pendu.montrer()</code></pre>
+</div>
+
+<p class="separateur"></p>
+
+<div class="exerciceApplication">
 	<p><strong>Exercice 5 : </strong>quel est l'affichage en réponse au code suivant ?</p>
 	<pre><code class="language-python">class Jeu:
 		def __init__(self, score):
@@ -316,7 +336,7 @@ print(td.id)</code></pre>
 	
 		pendu = Jeu()
 		pendu.montrer()</code></pre>
-	</div>
+</div>
 
 {% endblock cours %}
 
