--- a/home/templates/sources/python/progresser/competence5.html
+++ b/home/templates/sources/python/progresser/competence5.html
@@ -14,6 +14,10 @@
 
 <p><em>Travail Pratique proposé par N. Samarine.</em></p>
 
-<iframe src="{% static 'home/documents/TP_liste_fonctions.pdf' %}" height='1200px' type='application/pdf'></iframe>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/TP_liste_fonctions.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
